--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["bun"]
 
 [phases.install]
-cmds = ["bun install"]
+cmds = ["bun install --frozen-lockfile"]
 
 [phases.build]
 cmds = ["bun run build"]
 
 [start]
-cmd = "bun dist/index.js"
+cmd = "bun server.ts"
