--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hono/vite-build": "^1.3.0",
     "@hono/vite-dev-server": "^0.18.2",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/bun": "^1.2.23",
     "tailwindcss": "^4.0.9",
     "vite": "^6.3.5",
     "wrangler": "^4.4.0"
